fix: test alignment

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ i {
 }
 
 h1,
+h2,
 h4 {
   font-weight: 500;
   line-height: 1.4;
